--- a/package.json
+++ b/package.json
@@ -1,19 +1,191 @@
 {
-  "name": "recigle3",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
+    "@mpth/react-no-ssr": "1.0.1",
+    "axios": "0.21.1",
+    "camelcase-keys": "7.0.0",
     "next": "11.0.1",
+    "next-pwa": "5.2.24",
+    "node-sass": "5.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-autosuggest": "10.1.0",
+    "react-dom": "17.0.2",
+    "react-grid-system": "7.2.0",
+    "react-hook-form": "7.11.1",
+    "react-icons": "4.2.0",
+    "react-storage-hooks": "4.0.1",
+    "react-three-toggle": "0.5.0",
+    "ress": "4.0.0",
+    "rooks": "5.2.0",
+    "sass-mq": "5.0.1",
+    "use-pwa": "1.0.1",
+    "xml2js": "0.4.23"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
-    "typescript": "4.3.5"
-  }
+    "@types/react-autosuggest": "10.1.5",
+    "@types/xml2js": "0.4.9",
+    "@typescript-eslint/eslint-plugin": "4.28.4",
+    "@typescript-eslint/parser": "4.28.4",
+    "eslint": "7.31.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-css-modules": "2.11.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-sort-keys-shorthand": "2.1.0",
+    "eslint-plugin-typescript-sort-keys": "1.7.0",
+    "prettier": "2.3.2",
+    "stylelint": "13.13.1",
+    "stylelint-config-css-modules": "2.2.0",
+    "stylelint-config-recommended-scss": "4.3.0",
+    "stylelint-config-sass-guidelines": "8.0.0",
+    "stylelint-scss": "3.20.1",
+    "typescript": "4.3.5",
+    "typescript-plugin-css-modules": "3.4.0"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "commonjs": true,
+      "es6": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:prettier/recommended",
+      "plugin:import/errors",
+      "plugin:import/warnings",
+      "plugin:import/typescript",
+      "plugin:react-hooks/recommended",
+      "plugin:jsx-a11y/recommended",
+      "plugin:css-modules/recommended",
+      "plugin:typescript-sort-keys/recommended",
+      "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 2020,
+      "project": [
+        "./tsconfig.json"
+      ],
+      "sourceType": "module"
+    },
+    "plugins": [
+      "prettier",
+      "react",
+      "@typescript-eslint",
+      "import",
+      "sort-keys-shorthand",
+      "jsx-a11y",
+      "css-modules",
+      "typescript-sort-keys"
+    ],
+    "rules": {
+      "import/order": [
+        "error",
+        {
+          "alphabetize": {
+            "caseInsensitive": true,
+            "order": "asc"
+          }
+        }
+      ],
+      "jsx-a11y/anchor-is-valid": [
+        "error",
+        {
+          "aspects": [
+            "invalidHref",
+            "preferButton"
+          ],
+          "components": [
+            "Link"
+          ],
+          "specialLink": [
+            "hrefLeft",
+            "hrefRight"
+          ]
+        }
+      ],
+      "prettier/prettier": "error",
+      "react/jsx-sort-props": [
+        "error",
+        {
+          "callbacksLast": false,
+          "ignoreCase": false,
+          "noSortAlphabetically": false,
+          "reservedFirst": false,
+          "shorthandFirst": false,
+          "shorthandLast": false
+        }
+      ],
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off",
+      "sort-keys-shorthand/sort-keys-shorthand": [
+        "error",
+        "asc",
+        {
+          "caseSensitive": true,
+          "natural": true,
+          "shorthand": "first"
+        }
+      ]
+    },
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "paths": [
+            "src"
+          ]
+        }
+      },
+      "react": {
+        "version": "detect"
+      }
+    }
+  },
+  "name": "recigle3",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "start": "next start"
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-sass-guidelines",
+      "stylelint-config-recommended-scss",
+      "stylelint-config-css-modules"
+    ],
+    "plugins": [
+      "stylelint-scss"
+    ],
+    "rules": {
+      "at-rule-no-unknown": [
+        true,
+        {
+          "ignoreAtRules": [
+            "include",
+            "mixin"
+          ]
+        }
+      ],
+      "color-named": [
+        "never",
+        {
+          "ignore": [
+            "inside-function"
+          ]
+        }
+      ],
+      "selector-class-pattern": null
+    }
+  },
+  "version": "0.1.0"
 }
