--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-grid-system": "7.2.0",
     "react-hook-form": "7.11.1",
     "react-icons": "4.2.0",
+    "react-ios-pwa-prompt": "1.8.4",
     "react-storage-hooks": "4.0.1",
     "react-three-toggle": "0.5.0",
     "ress": "4.0.0",
