--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "0.21.1",
     "camelcase-keys": "7.0.0",
     "next": "11.0.1",
+    "next-i18next": "8.5.5",
     "next-pwa": "5.2.24",
     "node-sass": "5.0.0",
     "react": "17.0.2",
@@ -14,10 +15,11 @@
     "react-icons": "4.2.0",
     "react-ios-pwa-prompt": "1.8.4",
     "react-storage-hooks": "4.0.1",
-    "react-three-toggle": "0.5.0",
+    "react-three-toggle": "0.5.2",
     "ress": "4.0.0",
     "rooks": "5.3.0",
     "sass-mq": "5.0.1",
+    "sweetalert": "2.1.2",
     "use-pwa": "1.0.1",
     "xml2js": "0.4.23"
   },
